--- a/src/components/newcollections/NewCollections.css
+++ b/src/components/newcollections/NewCollections.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height:90vh;
+  margin-bottom: 100px;
 }
 .newcollections h1 {
   text-transform: uppercase;
@@ -19,7 +19,26 @@
 }
 .collections {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   margin-top: 50px;
   gap: 30px;
 }
+/* responsiveness */
+/* Large tablets & small laptops (1024px and below */
+@media screen and (max-width: 1200px) {
+  .collections {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* Tablets & large mobiles (768px and below) */
+@media screen and (min-width: 768px) {
+  .collections {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+/*Small phones (480px and below)  */
+/* @media screen and (min-width: 480px) {
+  .collections {
+    grid-template-columns: 1fr;
+  }
+}  */
